--- a/theme.html
+++ b/theme.html
@@ -234,6 +234,7 @@
         {% if not is_login %}
           <span class="span3 offset1">
             <div class="bio">
+              <img class="avatar" src="./yeolmae.jpg" alt="{{ site.author }}" />
               <p>{{ site.bio }}</p>
               <p>{{ theme.social.follow }}</p>
               <ul class="unstyled social">
