사진 경로 수정 (raw)

--- a/theme.html
+++ b/theme.html
@@ -234,7 +234,7 @@
         {% if not is_login %}
           <span class="span3 offset1">
             <div class="bio">
-              <img class="avatar" src="https://github.com/Hayarobee/theme-original/blob/master/yeolmae.jpg" alt="{{ site.author }}" />
+              <img class="avatar" src="https://raw.githubusercontent.com/Hayarobee/theme-original/master/yeolmae.jpg" alt="{{ site.author }}" />
               <p>{{ site.bio }}</p>
               <p>{{ theme.social.follow }}</p>
               <ul class="unstyled social">
