--- a/theme.html
+++ b/theme.html
@@ -61,6 +61,8 @@
               <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                   <li><a href="/">Blog</a></li>
+                  <li><a href="/">JW Blog</a></li>
+                  <li><a href="/">MK Blog</a></li>
                   {% if pages %}
                   {% for page in pages %}
                   <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
