changed footer code

--- a/theme.html
+++ b/theme.html
@@ -289,6 +289,10 @@
         {% endif %}
       </div>
 
+      <div class="navbar navbar-fixed-bottom">
+        <div class="navbar-inner">
+          <div class="container">
+
       <div class="row">
         <div class="span10 offset1">
           <footer>
@@ -307,6 +311,10 @@
         </div>
       </div>
     </div>
+
+          </div>
+        </div>
+      </div>
 
     {% endif %}
 
