removed fixed style

--- a/theme.html
+++ b/theme.html
@@ -289,7 +289,7 @@
         {% endif %}
       </div>
 
-      <div class="navbar navbar-fixed-bottom">
+      <div class="navbar">
         <div class="navbar-inner">
           <div class="container">
 
