--- a/theme.html
+++ b/theme.html
@@ -294,7 +294,7 @@
       </div>
 
       <div class="row">
-        <div class="span10 offset1">
+        <div class="footer span10 offset1">
           <footer>
             &copy; <a href="/">{{ site.name }}</a>. Powered by <a href="http://postach.io" target="_blank">Postach.io</a>
             {% if not is_login %}
